@@ -1,3 +1,6 @@
+Tue  May 10 2005	H. Wade Minter (minter@lunenburg.org)
+     * Remove the plugin stuff until 2.2.
+
 Tue  Apr  5 2005	H. Wade Minter (minter@lunenburg.org)
      * Hardcode Tk::DragDrop::Win32Site in the module list.
 
